# core-llm-bridge

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SUMMARY.md  pyproject.toml  pytest.ini  run_local_checks.sh  test_local.sh
.github/workflows/: tests.yml
docs/: versioning.md
examples/: prompt_manager_usage.py  simple_chat.py  simple_rpg.py  streaming.py  test_ollama_integration.py  with_tools.py
scripts/: _settings.py  test_anthropic.py  test_ollama.py
src/core_llm_bridge/: __init__.py  config.py  cost_tracker.py  exceptions.py
src/core_llm_bridge/core/: __init__.py  base.py  engine.py  models.py
src/core_llm_bridge/prompts/: code_assistant.yaml  creative_writer.yaml  data_analyst.yaml  sales_agent.yaml  tutor.yaml
src/core_llm_bridge/providers/: __init__.py  anthropic.py  factory.py  ollama.py  openai.py
src/core_llm_bridge/utils/: __init__.py  prompt_manager.py  token_counter.py
src/llm_bridge/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_engine.py  test_models.py  test_ollama_provider.py  test_provider_factory.py  test_utils.py
